<resources>
    <string name="app_name">Flora</string>
    <string name="flora_y_fauna">FLORA Y FAUNA</string>
    <string name="add">ADD</string>
    <string name="id">ID Image</string>
    <string name="nombre">Image name</string>
    <string name="descripcion">Image description</string>
    <string name="select">SELECT</string>
    <string name="addImg">ADD</string>
    <string name="add_flora">add flora</string>
    <string name="nombreItem">NOMBRE</string>
    <string name="familiaItem">FAMILIA</string>
    <string name="image_flora">image flora</string>
    <string name="family">FAMILY</string>
    <string name="habitat">HABITAT</string>
    <string name="altitude">ALTITUDE</string>
    <string name="create_a_new_flora">CREATE A NEW FLORA</string>
    <string name="name">NAME</string>
    <string name="add_image_flora">ADD IMAGE FLORA</string>
    <string name="clean">CLEAN</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="minus">-</string>
    <string name="more">+</string>
</resources>