<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".view.AddImagenActivity">

    <TextView
        android:id="@+id/tvTitleImage"
        style="@style/titleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/default_flora"
        android:drawableEnd="@drawable/default_flora"
        android:text="@string/add_image_flora"
        app:layout_constraintBottom_toTopOf="@+id/tvIdAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIdAdd"
        style="@style/editStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNombreFLora"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleImage"
        app:layout_constraintStart_toStartOf="@+id/tvTitleImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleImage"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
        tools:text="67" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvNombreFLora"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvDescrFlora"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTitleImage"
        app:layout_constraintTop_toBottomOf="@+id/tvIdAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreFlora"
            style="@style/editStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvDescrFlora"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btAddImg"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTitleImage"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreFLora">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescrFlora"
            style="@style/editStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSelectImg"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/select"
        app:icon="@drawable/ic_baseline_image_search_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btAddImg"
        app:layout_constraintEnd_toStartOf="@+id/btAddImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitleImage"
        app:layout_constraintTop_toTopOf="@+id/btAddImg" />

    <Button
        android:id="@+id/btAddImg"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleImage"
        app:layout_constraintStart_toEndOf="@+id/btSelectImg"
        app:layout_constraintTop_toBottomOf="@+id/tvDescrFlora" />

</androidx.constraintlayout.widget.ConstraintLayout>